# TerminalDrome

./: .gitignore  Cargo.toml  Dockerfile  README.md  STRUKTUR.txt  build.sh  getartist.txt  log  patch7.patch  projektstruktur.txt  state.json  terminaldrome.config.template
diffs/: neu.diff
src/: api.rs  audio.rs  config.rs  cover.rs  endpoint.rs  main.rs  main.rs.orig  main.rs.rej  main.rs.rej.orig  main.rs.save  mod.rs  p  patch.patch  patch14.patch  patch3.patch  patch4.patch  patch5.patch  patch6.patch  patch8.patch  ui.rs  visual.rs
src/api/: endpoints.rs  mod.rs  models.rs
src/app/: mod.rs
src/patch/: fix.patch  fix_syntax.patch  main.rs.rej.orig  p  p2  patch.patch  patch10.patch  patch11.patch  patch12.patch  patch15.patch  patch16.patch  patch17.patch  patch18.patch  patch19.patch  patch2.patch  patch20.patch  patch21.patch  patch22.patch  patch23.patch  patch24.patch  patch25.patch  patch9.patch  scrobbling.patch
src/ui/: help.rs  jukebox_panels.rs  mod.rs  panels.rs  search_input.rs
