[package]
name = "TerminalDrome"
version = "0.2.3"
edition = "2021"

[dependencies]
ratatui = "0.26.0"
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full", "rt-multi-thread"] }
tempfile = "3.3"
crossterm = { version = "0.27", features = ["event-stream"] }
futures = "0.3"
directories = "4.0"
colored = "2.1"
image = { version = "0.24", features = ["jpeg", "png"] }
lazy_static = "1.4.0"