[package]
name = "terminaldrome"
version = "0.2.3"
edition = "2021"
authors = ["Jan Montag"]
description = "A terminal-based Navidrome music client"
license = "MIT"
repository = "https://github.com/thafaker/terminaldrome"

[[bin]]
name = "terminaldrome"
path = "src/main.rs"

[dependencies]
ratatui = "0.26.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
tempfile = "3.3"
crossterm = { version = "0.27", features = ["event-stream"] }
directories = "4.0"
image = { version = "0.24", features = ["jpeg", "png"] }
lazy_static = "1.4.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true